Refatorado a camada CustomerService para utilizar os métodos do CustomerRepository já acessando e gravando dados no banco de Dados. Alterado a senha do usuário no banco aqui no Mysql do notebook da SPDM onde estudo depois do horário.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mercadolivro?createDatabaseIfNotExist=true
     username: fabiofcunha
-    password: Lverdino76@
+    password: Hidrion23@
     driver-class-name: com.mysql.cj.jdbc.Driver
